aws/Fargate/mattermost.yml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-service
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: NodePort
  selector:
    app: mattermost-app
    type: front-end
  ports:
    - port: 80
      targetPort: 8065

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost-deployment
  labels:
    app: mattermost-app
    type: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mattermost-app
      type: front-end
  template:
    metadata:
      labels:
        app: mattermost-app
        type: front-end
    spec:
      containers:
        - name: mattermost-container
          image: 814257489889.dkr.ecr.ap-south-1.amazonaws.com/eksfargatemm:latest
          ports:
             - containerPort: 8065
